--- a/StormPC/StormPC/Views/Dashboard/InventoryReportPage.xaml
+++ b/StormPC/StormPC/Views/Dashboard/InventoryReportPage.xaml
@@ -222,7 +222,7 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="300"/>
-                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
 
                 <TextBlock Text="Phân tích tuổi tồn kho" 
@@ -238,16 +238,18 @@
                          ItemsSource="{x:Bind ViewModel.AgedInventories, Mode=OneWay}"
                          AutoGenerateColumns="False"
                          IsReadOnly="True"
+                         HorizontalAlignment="Stretch"
+                         HorizontalScrollBarVisibility="Auto"
                          Margin="0,10,0,0">
                     <grid:DataGrid.Columns>
-                        <grid:DataGridTextColumn Header="SKU" Binding="{Binding SKU}"/>
-                        <grid:DataGridTextColumn Header="Tên sản phẩm" Binding="{Binding ModelName}"/>
-                        <grid:DataGridTextColumn Header="Danh mục" Binding="{Binding CategoryName}"/>
-                        <grid:DataGridTextColumn Header="Thương hiệu" Binding="{Binding BrandName}"/>
-                        <grid:DataGridTextColumn Header="Tồn kho" Binding="{Binding StockQuantity, Converter={StaticResource NumberFormatConverter}}"/>
-                        <grid:DataGridTextColumn Header="Giá trị" Binding="{Binding StockValue, Converter={StaticResource CurrencyConverter}}"/>
-                        <grid:DataGridTextColumn Header="Số ngày tồn" Binding="{Binding DaysInStock, Converter={StaticResource NumberFormatConverter}}"/>
-                        <grid:DataGridTextColumn Header="Lần bán cuối" Binding="{Binding LastSoldDate, Converter={StaticResource DateTimeConverter}}"/>
+                        <grid:DataGridTextColumn Header="SKU" Binding="{Binding SKU}" Width="*"/>
+                        <grid:DataGridTextColumn Header="Tên sản phẩm" Binding="{Binding ModelName}" Width="2*"/>
+                        <grid:DataGridTextColumn Header="Danh mục" Binding="{Binding CategoryName}" Width="*"/>
+                        <grid:DataGridTextColumn Header="Thương hiệu" Binding="{Binding BrandName}" Width="*"/>
+                        <grid:DataGridTextColumn Header="Tồn kho" Binding="{Binding StockQuantity, Converter={StaticResource NumberFormatConverter}}" Width="*"/>
+                        <grid:DataGridTextColumn Header="Giá trị" Binding="{Binding StockValue, Converter={StaticResource CurrencyConverter}}" Width="*"/>
+                        <grid:DataGridTextColumn Header="Số ngày tồn" Binding="{Binding DaysInStock, Converter={StaticResource NumberFormatConverter}}" Width="*"/>
+                        <grid:DataGridTextColumn Header="Lần bán cuối" Binding="{Binding LastSoldDate, Converter={StaticResource DateTimeConverter}}" Width="*"/>
                     </grid:DataGrid.Columns>
                 </grid:DataGrid>
             </Grid>
@@ -256,7 +258,7 @@
             <Grid Grid.Row="5">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
 
                 <TextBlock Text="Đề xuất nhập hàng" 
@@ -266,19 +268,21 @@
                 <grid:DataGrid Grid.Row="1"
                          ItemsSource="{x:Bind ViewModel.RestockSuggestions, Mode=OneWay}"
                          AutoGenerateColumns="False"
-                         IsReadOnly="True">
+                         IsReadOnly="True"
+                         HorizontalAlignment="Stretch"
+                         HorizontalScrollBarVisibility="Auto">
                     <grid:DataGrid.Columns>
-                        <grid:DataGridTextColumn Header="SKU" Binding="{Binding SKU}"/>
-                        <grid:DataGridTextColumn Header="Tên sản phẩm" Binding="{Binding ModelName}"/>
-                        <grid:DataGridTextColumn Header="Danh mục" Binding="{Binding CategoryName}"/>
-                        <grid:DataGridTextColumn Header="Thương hiệu" Binding="{Binding BrandName}"/>
-                        <grid:DataGridTextColumn Header="Tồn kho" Binding="{Binding CurrentStock, Converter={StaticResource NumberFormatConverter}}"/>
-                        <grid:DataGridTextColumn Header="TB bán/tháng" Binding="{Binding AverageMonthlySales, Converter={StaticResource NumberFormatConverter}}"/>
-                        <grid:DataGridTextColumn Header="Đề xuất nhập" Binding="{Binding SuggestedReorderQuantity, Converter={StaticResource NumberFormatConverter}}"/>
-                        <grid:DataGridTextColumn Header="Giá trị nhập" Binding="{Binding EstimatedValue, Converter={StaticResource CurrencyConverter}}"/>
+                        <grid:DataGridTextColumn Header="SKU" Binding="{Binding SKU}" Width="*"/>
+                        <grid:DataGridTextColumn Header="Tên sản phẩm" Binding="{Binding ModelName}" Width="2*"/>
+                        <grid:DataGridTextColumn Header="Danh mục" Binding="{Binding CategoryName}" Width="*"/>
+                        <grid:DataGridTextColumn Header="Thương hiệu" Binding="{Binding BrandName}" Width="*"/>
+                        <grid:DataGridTextColumn Header="Tồn kho" Binding="{Binding CurrentStock, Converter={StaticResource NumberFormatConverter}}" Width="*"/>
+                        <grid:DataGridTextColumn Header="TB bán/tháng" Binding="{Binding AverageMonthlySales, Converter={StaticResource NumberFormatConverter}}" Width="*"/>
+                        <grid:DataGridTextColumn Header="Đề xuất nhập" Binding="{Binding SuggestedReorderQuantity, Converter={StaticResource NumberFormatConverter}}" Width="*"/>
+                        <grid:DataGridTextColumn Header="Giá trị nhập" Binding="{Binding EstimatedValue, Converter={StaticResource CurrencyConverter}}" Width="*"/>
                     </grid:DataGrid.Columns>
                 </grid:DataGrid>
             </Grid>
-    </Grid>
+        </Grid>
     </ScrollViewer>
 </Page> 
